# asus_driver_touchpad

./: .gitignore  CMakeLists.txt  LICENSE  README.md  asus_driver_touchpad  shell.nix
src/: defines.h  error.c  main.c
src/event/: event.c  event.h  material.c  material.h  run.c  run.h
src/events/: event_loop.c  event_loop.h  interface.c  interface.h  keys_events.c  keys_events.h
src/init/: get_proc.c  get_proc.h  init.c  init.h
src/kernel_setup/: device.c  device.h  keymap.c  keymap.h  models.c  models.h  uinput.c  uinput.h
src/models/: models.c  models.h  models_type.c  models_type.h
src/utility/: get_proc.c  get_proc.h  uinput_init.c  uinput_init.h  utility.c  utility.h
src/utils/: error.c  error.h  keymap.c  keymap.h  utils.c  utils.h
